tests/architecture/fixtures/fail/src/dialogos/ui/legacy_import.py
from __future__ import annotations

from dialogos.config import DialogosConfig


def load_config() -> DialogosConfig | None:
    return None
